2009-08-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Debugger/ObjectValueTreeView.cs: Track API
	  changes.

2009-08-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Debugger.addin.xml: Try some different Mac
	  keyboard mappings for build and run commands.

2009-08-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.csproj: Don't make local copies of
	  project references.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/MonoDevelop.Debugger.BreakpointPropertiesDialog.cs:
	  Flush.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/MonoDevelop.Debugger.ExceptionsDialog.cs:
	* gtk-gui/MonoDevelop.Debugger.AttachToProcessDialog.cs:
	* gtk-gui/MonoDevelop.Debugger.ExpressionEvaluatorDialog.cs:
	  Flush.

2009-07-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Debugger/DebugCommands.cs: Run has now "Run
	  again" functionality when no debugger is installed.

2009-07-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Debugger/ObjectValueTreeView.cs: Track API
	  changes.

2009-07-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Debugger/ObjectValueTreeView.cs: Track api
	  changes.

2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger/ImmediatePad.cs: Use the new
	  DesktopService instead of PlatformService.

2009-06-12  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Debugger.csproj:
	* MonoDevelop.Debugger.addin.xml:
	* MonoDevelop.Debugger/ImmediatePad.cs: Added immediate pad.

2009-05-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger\ThreadsPad.cs: Don't try to get the
	  list of threads if the debugger is running.

	* MonoDevelop.Debugger\DebugCommands.cs: Fix logic for
	  checking if debugging is supported.

2009-05-25  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger\ThreadsPad.cs:
	* MonoDevelop.Debugger\StackTracePad.cs: Don't render a
	  border. The dock item already provides one.
